--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,8 @@
 <!-- Hero section -->
 <app-hero-section></app-hero-section>
 
-<!-- About section -->
+<!-- About section one -->
 <app-about-section></app-about-section>
+
+<!-- About section two -->
+<app-about-section-two></app-about-section-two>
