--- a/src/app/components/about-section/about-section.component.html
+++ b/src/app/components/about-section/about-section.component.html
@@ -2,7 +2,7 @@
 
     <!-- Top - Logo companies -->
     <div class="flex flex-wrap gap-y-4 justify-between items-center">
-        <p class="w-48 max-[660px]:text-center text-fontPrimary m-auto">As seen on the world's best magazines and media</p>
+        <p class="w-48 text-fontPrimary max-[660px]:text-center max-[660px]:m-auto">As seen on the world's best magazines and media</p>
         <div class="flex flex-wrap gap-x-5 gap-y-2 justify-center">
             @for (course of [1,2,3,4,5]; track course) {
                 <img src="assets/img/company-logo.png" alt="company-logo">
