--- a/src/app/components/hero-section/hero-section.component.html
+++ b/src/app/components/hero-section/hero-section.component.html
@@ -1,7 +1,7 @@
 <div id="home" class="mt-16 flex max-[800px]:flex-wrap">
     <!-- Left side - info section -->
     <div
-      class="w-1/2  max-[800px]:w-full flex bg-bgColor justify-around items-center bg-no-repeat" 
+      class="w-1/2 bg-bgColor flex justify-around items-center bg-no-repeat max-[800px]:w-full" 
       style="height: calc(100vh - 64px); background-image: url('assets/img/edgeTop.png'), url('assets/img/edgeBottom.png');background-position: 0 0, bottom right; background-size: 18%"
     >
       <!-- Info block -->
