--- a/src/app/components/about-section-two/about-section-two.component.html
+++ b/src/app/components/about-section-two/about-section-two.component.html
@@ -3,7 +3,7 @@
     <div class="flex flex-wrap">
 
         <!-- Left side - Info block -->
-        <div class="w-1/2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8">
+        <div class="w-1/2 p-2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8">
             <div class="w-96 h-60 flex flex-col gap-4">
                 <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs">
                     Comfort first
@@ -20,7 +20,7 @@
         <!-- Right side - Image section -->
         <div class="w-1/2 p-8 max-[800px]:w-full">
             <div 
-              class="w-full rounded-3xl" 
+              class="w-full rounded-3xl max-[800px]:h-50vh" 
               style="height:calc(100vh - 64px); background-image: url('assets/img/furniture-one.png');  background-size: cover; background-position: center"
             >
           </div>
@@ -33,14 +33,14 @@
         <!-- Left side - Image section -->
         <div class="w-1/2 p-8 max-[800px]:w-full max-[800px]:order-2">
             <div 
-              class="w-full rounded-3xl" 
+              class="w-full rounded-3xl max-[800px]:h-50vh" 
               style="height:calc(100vh - 64px); background-image: url('assets/img/furniture-two.png');  background-size: cover; background-position: center"
             >
           </div>
         </div>
 
         <!-- Right side - Info block -->
-        <div class="w-1/2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8">
+        <div class="w-1/2 p-2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8">
             <div class="w-96 h-fit flex flex-col gap-4">
                 <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs">
                     Quick and easy
