--- a/src/app/components/hero-section/hero-section.component.html
+++ b/src/app/components/hero-section/hero-section.component.html
@@ -5,7 +5,7 @@
       style="height: calc(100vh - 64px); background-image: url('assets/img/edgeTop.png'), url('assets/img/edgeBottom.png');background-position: 0 0, bottom right; background-size: 18%"
     >
       <!-- Info block -->
-      <div class="w-96 h-60 flex flex-col gap-4">
+      <div class="w-96 h-60 flex flex-col gap-4 max-[800px]:px-4 max-[800px]:h-fit">
         <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs">
             Ўзингизнинг орзуингиздаги жойни топинг
         </p>
