--- a/src/app/components/navbar-section/navbar-section.component.html
+++ b/src/app/components/navbar-section/navbar-section.component.html
@@ -15,7 +15,7 @@
             <label class="fixed top-6 right-8 w-7 h-7 cursor-pointer z-[1]" for="menu__toggle">
                 <span 
                   class="absolute top-2 w-full h-[2px] duration-300 bg-btnColor before:absolute before:w-full before:bg-btnColor before:h-[2px] before:-top-2 after:absolute after:w-full after:bg-btnColor after:h-[2px] after:top-2" 
-                  [ngClass]="{ 'rotate-45 before:top-0 before:rotate-0 after:top-0 after:rotate-90': isMenuChecked }"
+                  [ngClass]="{ 'rotate-45 before:top-0 before:rotate-0 after:-top-0 after:rotate-90': isMenuChecked }"
                 ></span>
             </label>
 
