--- a/src/app/components/navbar-section/navbar-section.component.html
+++ b/src/app/components/navbar-section/navbar-section.component.html
@@ -11,11 +11,11 @@
     <div>
         <!-- Burger menu -->
         <div class="min-[651px]:hidden">
-            <input id="menu__toggle" class="opacity-0" type="checkbox" (change)="onCheckboxChange($event)" />
+            <input id="menu__toggle" class="opacity-0" type="checkbox" (change)="onCheckboxChange()" />
             <label class="fixed top-6 right-8 w-7 h-7 cursor-pointer z-[1]" for="menu__toggle">
                 <span 
                   class="absolute top-2 w-full h-[2px] duration-300 bg-btnColor before:absolute before:w-full before:bg-btnColor before:h-[2px] before:-top-2 after:absolute after:w-full after:bg-btnColor after:h-[2px] after:top-2" 
-                  [ngClass]="{ 'rotate-45 before:top-0 before:rotate-0 after:-top-0 after:rotate-90': isMenuChecked }"
+                  [ngClass]="{ 'rotate-45 before:top-0 before:rotate-0 after:-top-2 after:rotate-90': isMenuChecked }"
                 ></span>
             </label>
 
@@ -24,16 +24,16 @@
               class="block fixed top-0 -right-full w-60 h-full m-0 py-20 list-none bg-[#ECEFF1] shadow-[-2px_2px_6px_rgba(0,0,0,0.4)] duration-300 text-fontPrimary text-sm font-semibold"
               [ngClass]="{ 'right-0': isMenuChecked }"
             >
-                <li (click)="isMenuChecked = false" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
+                <li (click)="onCheckboxChange()" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
                     <a href="#home">{{ 'header.home' | translate }}</a>
                 </li>
-                <li (click)="isMenuChecked = false" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
+                <li (click)="onCheckboxChange()" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
                     <a href="#about">{{ 'header.aboutCompany' | translate }}</a>
                 </li>
-                <li (click)="isMenuChecked = false" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
+                <li (click)="onCheckboxChange()" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
                     <a href="#products">{{ 'header.products' | translate }}</a>
                 </li>
-                <li (click)="isMenuChecked = false" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
+                <li (click)="onCheckboxChange()" class="py-3 px-6 hover:bg-[#CFD8DC] duration-300">
                     <a href="#contact">{{ 'header.contact' | translate }}</a>
                 </li>
             </ul>
