--- a/src/app/components/about-section-two/about-section-two.component.html
+++ b/src/app/components/about-section-two/about-section-two.component.html
@@ -18,9 +18,9 @@
         </div>
 
         <!-- Right side - Image section -->
-        <div class="w-1/2 p-8 max-[800px]:w-full">
+        <div class="w-1/2 p-8 max-[800px]:w-full max-[800px]:h-50vh overflow-hidden">
             <div 
-              class="w-full rounded-3xl max-[800px]:h-50vh" 
+              class="w-full rounded-3xl"
               style="height:calc(100vh - 64px); background-image: url('assets/img/furniture-one.png');  background-size: cover; background-position: center"
             >
           </div>
