--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,6 @@
 
 <!-- About section two -->
 <app-about-section-two></app-about-section-two>
+
+<!-- Products section -->
+<app-products-section></app-products-section>
