--- a/src/app/sections/about-section-two/about-section-two.component.html
+++ b/src/app/sections/about-section-two/about-section-two.component.html
@@ -3,15 +3,15 @@
     <div class="flex flex-wrap">
 
         <!-- Left side - Info block -->
-        <div class="w-1/2 p-2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8">
+        <div class="w-1/2 p-2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8 max-[800px]:px-3">
             <div class="w-96 h-60 flex flex-col gap-4">
-                <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs">
+                <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs max-[600px]:text-[10px]">
                     Comfort first
                 </p>
-                <h1 class="text-fontPrimary text-[44px] leading-[50px] font-bold">
+                <h1 class="text-fontPrimary text-[44px] leading-[50px] font-bold max-[600px]:text-[32px]">
                     The best houses for family comfort
                 </h1>
-                <p class="text-fontSecondary">
+                <p class="text-fontSecondary max-[600px]:text-xs">
                     Ectus ipsum faucibus justo, et semper quam nisl in nibh. Proin sollicitudin, lorem non posuere blandit.
                 </p>
             </div>
@@ -33,19 +33,19 @@
         <!-- Left side - Image section -->
         <div class="w-1/2 p-8 max-[800px]:w-full max-[800px]:order-2">
             <div 
-              class="w-full rounded-3xl max-[800px]:h-50vh" 
+              class="w-full rounded-3xl max-[800px]:h-1/2" 
               style="height:calc(100vh - 64px); background-image: url('assets/img/furniture-two.png');  background-size: cover; background-position: center"
             >
           </div>
         </div>
 
         <!-- Right side - Info block -->
-        <div class="w-1/2 p-2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8">
+        <div class="w-1/2 p-2 flex justify-around items-center max-[800px]:w-full max-[800px]:mt-8 max-[800px]:px-3">
             <div class="w-96 h-fit flex flex-col gap-4">
-                <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs">
+                <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs max-[600px]:text-[10px]">
                     Quick and easy
                 </p>
-                <h1 class="text-fontPrimary text-[44px] leading-[50px] font-bold">
+                <h1 class="text-fontPrimary text-[44px] leading-[50px] font-bold max-[600px]:text-[32px]">
                     Fast forward process
                 </h1>
                 <p class="text-fontSecondary">
