--- a/src/app/sections/navbar-section/navbar-section.component.html
+++ b/src/app/sections/navbar-section/navbar-section.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar section -->
-<div class="w-full py-4 px-8 fixed top-0 bg-white flex justify-between items-center">
+<div class="w-full py-4 px-8 fixed top-0 z-10 bg-white flex justify-between items-center">
 
     <!-- Logo -->
     <div class="w-fit flex gap-x-2 cursor-pointer">
@@ -45,7 +45,7 @@
                 <a href="#home">{{ 'header.home' | translate }}</a>
             </li>
             <li class="hover:text-btnColor duration-300">
-                <a href="#aboutCompany">{{ 'header.aboutCompany' | translate }}</a>
+                <a href="#about">{{ 'header.aboutCompany' | translate }}</a>
             </li>
             <li class="hover:text-btnColor duration-300">
                 <a href="#products">{{ 'header.products' | translate }}</a>
