--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="w-96 rounded-b-[10px] cursor-pointer max-[600px]:w-full max-[600px]:mx-4" style="box-shadow: 0 3px 6px 1px #E7E8E3">
+<div class="w-96 rounded-b-[10px] cursor-pointer max-[600px]:w-full max-[600px]:m-0" style="box-shadow: 0 3px 6px 1px #E7E8E3">
 
     <!-- Top - image block -->
     <div class="h-64 relative z-0">
