--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,3 +12,6 @@
 
 <!-- Products section -->
 <app-products-section></app-products-section>
+
+<!-- Slider section -->
+<app-slider-section></app-slider-section>
