--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,28 +1,28 @@
-<div class="w-[680px] h-[400px] m-auto px-10 relative m-[650px]:w-[390px] m-[650px]:h-[220px]">
+<div class="w-[680px] h-[400px] m-auto px-10 relative max-[700px]:w-[350px] max-[700px]:h-[200px] max-[700px]:px-6">
   <!-- Carousel -->
-    <div class="w-[600px] overflow-hidden m-[650px]:w-[350px]">
+    <div class="w-[600px] overflow-hidden max-[700px]:w-[300px]">
       <ul 
         id="slider"
-        class="m-0 p-0 w-[1800px] relative left-0" 
+        class="max-0 p-0 w-[1800px] relative left-0 max-[700px]:w-[900px]" 
         style="list-style:none; transition: left 0.5s"
       >
         <li class="float-left">
-          <img class="w-[600px] h-[400px] m-[650px]:w-[350px] m-[650px]:h-[220px]" src="assets/img/cards/card-1.png">
+          <img class="w-[600px] h-[400px] max-[700px]:w-[300px] max-[700px]:h-[200px]" src="assets/img/cards/card-1.png">
         </li>
         <li class="float-left">
-          <img class="w-[600px] h-[400px] m-[650px]:w-[350px] m-[650px]:h-[220px]" src="assets/img/cards/card-2.png">
+          <img class="w-[600px] h-[400px] max-[700px]:w-[300px] max-[700px]:h-[200px]" src="assets/img/cards/card-2.png">
         </li>
         <li class="float-left">
-          <img class="w-[600px] h-[400px] m-[650px]:w-[350px] m-[650px]:h-[220px]" src="assets/img/cards/card-3.png">
+          <img class="w-[600px] h-[400px] max-[700px]:w-[300px] max-[700px]:h-[200px]" src="assets/img/cards/card-3.png">
         </li>
       </ul>
     </div>
     <!-- Previous and Next buttons -->
     <button class="prev absolute left-0 top-[50%]">
-      <img class="w-10 m-[650px]:w-5" src="assets/icons/left.svg" alt="left">
+      <img class="w-10 max-[700px]:w-5" src="assets/icons/left.svg" alt="left">
     </button>
     <button class="next absolute right-0 top-[50%]">
-      <img class="w-10 m-[650px]:w-5" src="assets/icons/right.svg" alt="right">
+      <img class="w-10 max-[700px]:w-5" src="assets/icons/right.svg" alt="right">
     </button>
 </div>
     
