--- a/src/app/sections/products-section/products-section.component.html
+++ b/src/app/sections/products-section/products-section.component.html
@@ -1,4 +1,5 @@
 <div 
+  id="products"
   class="my-4 px-4 py-32 min-h-[100vh]" 
   style="background-image: url('assets/img/edgeRight.png'), url('assets/img/edgeLeft.png'); background-position: right top, left bottom; background-repeat: no-repeat;"
 >
