--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,3 +15,6 @@
 
 <!-- Slider section -->
 <app-slider-section></app-slider-section>
+
+<!-- Footer section -->
+<app-footer-section></app-footer-section>
