--- a/src/app/sections/navbar-section/navbar-section.component.html
+++ b/src/app/sections/navbar-section/navbar-section.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar section -->
-<div class="w-full py-4 px-8 fixed top-0 z-10 bg-white flex justify-between items-center">
+<header class="w-full py-4 px-8 fixed top-0 z-10 bg-white flex justify-between items-center">
 
     <!-- Logo -->
     <div class="w-fit flex gap-x-2 cursor-pointer">
@@ -55,4 +55,4 @@
             </li>
         </ul>
     </div>
-</div>
+</header>
