--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,5 +16,11 @@
 <!-- Slider section -->
 <app-slider-section></app-slider-section>
 
+<!-- Contact section -->
+<app-contact-section></app-contact-section>
+
+<!-- Message section -->
+<app-message-section></app-message-section>
+
 <!-- Footer section -->
 <app-footer-section></app-footer-section>
