--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -13,7 +13,7 @@
     </div>
 
     <!-- Bottom - detail block -->
-    <div class="p-4 text-fontPrimary font-bold">
+    <div class="p-4 text-fontPrimary font-bold max-[600px]:pt-0">
         <h1 class="text-xl">{{ data.name }}</h1>
         @if(data.discount) {
             <h3 class="h-[11px] text-xs font-normal text-fontSecondary line-through">{{ data.price | currency }} сум</h3>
