--- a/src/app/sections/message-section/message-section.component.html
+++ b/src/app/sections/message-section/message-section.component.html
@@ -1,4 +1,4 @@
-<div class="m-16">
+<div class="m-16 max-[700px]:mx-4">
 
     <!-- Info block -->
     <div class="w-fit h-fit mx-auto my-16 flex flex-col gap-4 text-center">
