--- a/src/app/sections/message-section/message-section.component.html
+++ b/src/app/sections/message-section/message-section.component.html
@@ -13,7 +13,7 @@
     <div class="flex flex-wrap">
 
         <!-- Form block -->
-        <div class="w-1/2 p-4 border border-fontSecondary border-r-0 rounded-l-3xl max-[700px]:w-full max-[700px]:rounded-t-xl max-[700px]:rounded-b-none">
+        <div class="w-1/2 p-4 border border-fontSecondary border-r-0 rounded-l-3xl max-[700px]:w-full max-[700px]:rounded-t-xl max-[700px]:rounded-b-none max-[700px]:border-r-[1px]">
     
             <h1 class="text-fontPrimary text-3xl leading-[36px] font-bold max-[600px]:text-[32px]">Have a question</h1>
             <p class="text-fontSecondary">For any questions, please contact our company operators</p>
