--- a/src/app/sections/message-section/message-section.component.html
+++ b/src/app/sections/message-section/message-section.component.html
@@ -1,7 +1,7 @@
-<div class="m-16 max-[700px]:mx-4">
+<div class="my-8 p-16 bg-bgColor max-[700px]:mx-4">
 
     <!-- Info block -->
-    <div class="w-fit h-fit mx-auto my-16 flex flex-col gap-4 text-center">
+    <div class="w-fit h-fit mx-auto mt-8 mb-16 flex flex-col gap-4 text-center">
         <p class="w-fit py-[2px] px-3 rounded-xl bg-[#E7E8E3] text-fontPrimary text-xs max-[600px]:text-[10px] m-auto">
             Give us feedback
         </p>
