--- a/src/app/sections/message-section/message-section.component.html
+++ b/src/app/sections/message-section/message-section.component.html
@@ -1,4 +1,4 @@
-<div class="my-8 p-16 bg-bgColor max-[700px]:mx-4">
+<div class="my-8 p-16 bg-bgColor max-[700px]:p-4">
 
     <!-- Info block -->
     <div class="w-fit h-fit mx-auto mt-8 mb-16 flex flex-col gap-4 text-center">
