--- a/src/app/sections/about-section/about-section.component.html
+++ b/src/app/sections/about-section/about-section.component.html
@@ -1,4 +1,7 @@
-<div id="about" class="flex flex-col gap-y-16 justify-between min-h-[100vh] py-8 px-16">
+<div 
+  id="about" 
+  class="myContainer flex flex-col gap-y-16 justify-between min-h-[100vh] py-8 px-16"
+>
 
     <!-- Top - Logo companies -->
     <div class="flex flex-wrap gap-y-4 justify-between items-center">
