--- a/src/app/sections/footer-section/footer-section.component.html
+++ b/src/app/sections/footer-section/footer-section.component.html
@@ -1,4 +1,4 @@
-<footer>
+<footer class="myContainer">
     <!-- Top block -->
     <div class="px-16 pt-8 pb-16 flex flex-wrap gap-y-8 justify-between max-[700px]:px-4">
 
