--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,3 +11,9 @@ body {
   scroll-behavior: smooth;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.myContainer {
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+}
