--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,3 +24,6 @@
 
 <!-- Footer section -->
 <app-footer-section></app-footer-section>
+
+<!-- product example -->
+<app-product-detail></app-product-detail>
