--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -1,7 +1,10 @@
-<div class="m-16 py-16 bg-fontSecondary rounded-3xl max-[500px]:m-4">
+<div 
+  id="contact" 
+  class="myContainer my-16 py-16 bg-fontSecondary rounded-3xl max-[500px]:m-4"
+>
 
-     <!-- Info block -->
-     <div class="w-fit h-fit m-auto mb-4 flex flex-col gap-4 text-center">
+    <!-- Info block -->
+    <div class="w-fit h-fit m-auto mb-4 flex flex-col gap-4 text-center">
         <p class="w-fit py-[2px] px-3 rounded-xl bg-white text-fontPrimary text-xs max-[600px]:text-[10px] m-auto">
             Find us
         </p>
