--- a/src/app/sections/hero-section/hero-section.component.html
+++ b/src/app/sections/hero-section/hero-section.component.html
@@ -1,4 +1,7 @@
-<div id="home" class="mt-16 flex max-[800px]:flex-wrap">
+<div 
+  id="home" 
+  class="myContainer mt-16 flex max-[800px]:flex-wrap"
+>
     <!-- Left side - info section -->
     <div
       class="w-1/2 bg-bgColor flex justify-around items-center bg-no-repeat max-[800px]:w-full" 
