--- a/src/app/sections/message-section/message-section.component.html
+++ b/src/app/sections/message-section/message-section.component.html
@@ -1,4 +1,4 @@
-<div class="my-8 p-16 bg-bgColor max-[700px]:p-4 max-[700px]:pb-12">
+<div class="myContainer my-8 p-16 bg-bgColor max-[700px]:p-4 max-[700px]:pb-12">
 
     <!-- Info block -->
     <div class="w-fit h-fit mx-auto mt-8 mb-16 flex flex-col gap-4 text-center">
@@ -13,7 +13,7 @@
     <div class="flex flex-wrap">
 
         <!-- Form block -->
-        <div class="w-1/2 p-4 border border-fontSecondary border-r-0 rounded-l-3xl max-[700px]:w-full max-[700px]:rounded-t-xl max-[700px]:rounded-b-none max-[700px]:border-r-[1px]">
+        <div class="w-1/2 p-4 max-[700px]:w-full">
     
             <h1 class="text-fontPrimary text-3xl leading-[36px] font-bold max-[600px]:text-[26px]">Have a question</h1>
             <p class="text-fontSecondary">For any questions, please contact our company operators</p>
@@ -30,10 +30,10 @@
         </div>
     
         <!-- Location map block -->
-        <div class="w-1/2 border p-4 border-fontSecondary rounded-r-3xl overflow-hidden max-[700px]:w-full max-[700px]:rounded-b-xl max-[700px]:rounded-t-none">
+        <div class="w-1/2 overflow-hidden max-[700px]:w-full">
     
             <!-- Google map -->
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d191885.5985551056!2d69.11455450255876!3d41.28247992509807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b0cc379e9c3%3A0xa5a9323b4aa5cb98!2sTashkent%2C%20Uzbekistan!5e0!3m2!1sen!2s!4v1711298523079!5m2!1sen!2s" style="width: 100%; height: 450px; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d191885.5985551056!2d69.11455450255876!3d41.28247992509807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x38ae8b0cc379e9c3%3A0xa5a9323b4aa5cb98!2sTashkent%2C%20Uzbekistan!5e0!3m2!1sen!2s!4v1711298523079!5m2!1sen!2s" style="width: 100%; height: 470px; border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
         </div>
     </div>
