--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,10 @@
 <!-- Navbar section -->
 <app-navbar-section></app-navbar-section>
 
-<!-- Hero section -->
-<app-hero-section></app-hero-section>
-
-<!-- About section one -->
-<app-about-section></app-about-section>
-
-<!-- About section two -->
-<app-about-section-two></app-about-section-two>
-
-<!-- Products section -->
-<app-products-section></app-products-section>
-
-<!-- Slider section -->
-<app-slider-section></app-slider-section>
-
-<!-- Contact section -->
-<app-contact-section></app-contact-section>
+<router-outlet></router-outlet>
 
 <!-- Message section -->
 <app-message-section></app-message-section>
 
 <!-- Footer section -->
 <app-footer-section></app-footer-section>
-
-<!-- product example -->
-<app-product-detail></app-product-detail>
