--- a/src/app/sections/contact-section/contact-section.component.html
+++ b/src/app/sections/contact-section/contact-section.component.html
@@ -1,43 +1,46 @@
-<div 
-  id="contact" 
-  class="myContainer my-16 py-16 bg-fontSecondary rounded-3xl max-[500px]:m-4"
->
+<div class="mx-8">
+    <div 
+      id="contact" 
+      class="myContainer my-16 py-16 bg-fontSecondary rounded-3xl max-[500px]:my-4"
+    >
 
-    <!-- Info block -->
-    <div class="w-fit h-fit m-auto mb-4 flex flex-col gap-4 text-center">
-        <p class="w-fit py-[2px] px-3 rounded-xl bg-white text-fontPrimary text-xs max-[600px]:text-[10px] m-auto">
-            Find us
-        </p>
-        <h1 class="text-white text-[44px] leading-[50px] font-bold max-[600px]:text-[32px]">
-            Contacts of Company
-        </h1>
-    </div>
-
-    <!-- Section block -->
-    <div class="flex justify-around max-[500px]:flex-col max-[500px]:gap-y-6">
-        <div>
-            <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
-                <img class="w-8 m-auto" src="assets/icons/phone.svg" alt="call icon">
-            </div>
-            <h2 class="font-bold text-xl text-center text-white">Call us</h2>
-            <p class="text-white text-center text-xs">+998 99 111 22 33</p>
+        <!-- Info block -->
+        <div class="w-fit h-fit m-auto mb-4 flex flex-col gap-4 text-center">
+            <p class="w-fit py-[2px] px-3 rounded-xl bg-white text-fontPrimary text-xs max-[600px]:text-[10px] m-auto">
+                Find us
+            </p>
+            <h1 class="text-white text-[44px] leading-[50px] font-bold max-[600px]:text-[32px]">
+                Contacts of Company
+            </h1>
         </div>
 
-        <div>
-            <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
-                <img class="w-8 m-auto" src="assets/icons/mail.svg" alt="call icon">
+        <!-- Section block -->
+        <div class="flex justify-around max-[500px]:flex-col max-[500px]:gap-y-6">
+            <div>
+                <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
+                    <img class="w-8 m-auto" src="assets/icons/phone.svg" alt="call icon">
+                </div>
+                <h2 class="font-bold text-xl text-center text-white">Call us</h2>
+                <p class="text-white text-center text-xs">+998 99 111 22 33</p>
             </div>
-            <h2 class="font-bold text-xl text-center text-white">Send email</h2>
-            <p class="text-white text-center text-xs">some&#64;gmail.com</p>
-        </div>
 
-        <div>
-            <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
-                <img class="w-8 m-auto" src="assets/icons/location.svg" alt="call icon">
+            <div>
+                <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
+                    <img class="w-8 m-auto" src="assets/icons/mail.svg" alt="call icon">
+                </div>
+                <h2 class="font-bold text-xl text-center text-white">Send email</h2>
+                <p class="text-white text-center text-xs">some&#64;gmail.com</p>
             </div>
-            <h2 class="font-bold text-xl text-center text-white">Find us</h2>
-            <p class="text-white text-center text-xs">Tashkent city</p>
+    
+            <div>
+                <div class="w-16 my-4 p-4 m-auto text-center bg-fontPrimary">
+                    <img class="w-8 m-auto" src="assets/icons/location.svg" alt="call icon">
+                </div>
+                <h2 class="font-bold text-xl text-center text-white">Find us</h2>
+                <p class="text-white text-center text-xs">Tashkent city</p>
+            </div>
         </div>
+    
     </div>
 
 </div>
