--- a/src/app/sections/navbar-section/navbar-section.component.html
+++ b/src/app/sections/navbar-section/navbar-section.component.html
@@ -3,7 +3,7 @@
 
     <div class="myContainer flex justify-between items-center">
         <!-- Logo -->
-        <div class="w-fit flex gap-x-2 cursor-pointer">
+        <div [routerLink]="['']" routerLinkActive="router-link-active"  class="w-fit flex gap-x-2 cursor-pointer">
             <img src="assets/img/logo.png" alt="logo">
             <span class="text-fontPrimary text-lg leading-8 font-semibold">Realco</span>
         </div>
