--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,5 +6,8 @@
 <!-- Message section -->
 <app-message-section></app-message-section>
 
+<!-- Our partners section -->
+<app-our-partners-section></app-our-partners-section>
+
 <!-- Footer section -->
 <app-footer-section></app-footer-section>
