--- a/src/app/components/slider/slider.component.html
+++ b/src/app/components/slider/slider.component.html
@@ -1,4 +1,4 @@
-<div class="w-[680px] h-[400px] m-auto px-10 relative max-[700px]:w-[350px] max-[700px]:h-[200px] max-[700px]:px-6">
+<div class="w-[680px] h-[400px] scale-105 m-auto px-10 relative max-[700px]:w-[350px] max-[700px]:h-[200px] max-[700px]:px-6">
   <!-- Carousel -->
     <div class="w-[600px] overflow-hidden max-[700px]:w-[300px]">
       <ul 
