--- a/src/app/modules/main-page/main-page.component.html
+++ b/src/app/modules/main-page/main-page.component.html
@@ -10,6 +10,9 @@
 <!-- Products section -->
 <app-products-section></app-products-section>
 
+<!-- About company section -->
+<app-about-company-section></app-about-company-section>
+
 <!-- Slider section -->
 <app-slider-section></app-slider-section>
 
